Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>Brice willy blog</title>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstraptheme.min.css">
 	</head>
 	<body>
 		<div>
@@ -34,5 +36,14 @@ commune, ils doivent aussi être souples et modulables, afin de pouvoir être ut
 une grande variété de projets, du plus banal au plus exotique. Autrement, leur intérêt serait
 grandement limité !</p>
 		</div>
+
+		{% for post in posts %}
+			<div>
+				<p>publié: {{ post.published_date }}</p>
+				<h2><a href="">{{ post.title }}</a></h2>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
+		{% endfor %}
+
 	</body>
 </html>
